Fix grafana service and configs
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/docker-compose.monitor.yml
+++ b/docker-compose.monitor.yml
@@ -13,8 +13,8 @@ services:
       - internal
   grafana:
     build:
-      context: .
-      dockerfile: grafana/Dockerfile
+      context: ./grafana
+      dockerfile: Dockerfile
     ports:
       - '3000:3000'
     restart: always
