--- a/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-grafana-dash-app-cm.tpl.yml
+++ b/deploy-templates/jellyfish-product/product/deploy/kubernetes/generators/jellyfish-grafana-dash-app-cm.tpl.yml
@@ -45,6 +45,17 @@ data:
       "iteration": 1623055676614,
       "links": [],
       "panels": [
+        {
+          "collapsed": true,
+          "datasource": null,
+          "gridPos": {
+            "h": 1,
+            "w": 24,
+            "x": 0,
+            "y": 0
+          },
+          "id": 61,
+          "panels": [
             {
               "cards": {
                 "cardPadding": null,
