--- a/grafana/provisioning/dashboards/standard.yml
+++ b/grafana/provisioning/dashboards/standard.yml
@@ -1,7 +1,8 @@
-- name: 'standard'
-  org_id: 1
-  folder: 'standard'
-  folderUid: 'standard'
-  type: file
-  options:
-    path: '/etc/grafana/dashboards/standard'
+apiVersion: 1
+
+providers:
+  - name: 'standard'
+    org_id: 1
+    folder: 'standard'
+    options:
+      path: '/etc/grafana/dashboards/standard'
