--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -34,6 +34,9 @@ services:
       - INTEGRATION_BALENA_API_OAUTH_BASE_URL=https://api.balena-cloud.com
       - INTEGRATION_BALENA_API_PRIVATE_KEY
       - INTEGRATION_BALENA_API_PUBLIC_KEY_PRODUCTION
+      - INTEGRATION_GITHUB_APP_ID
+      - INTEGRATION_GITHUB_PRIVATE_KEY
+      - INTEGRATION_GITHUB_SIGNATURE_KEY
       - INTEGRATION_GITHUB_TOKEN
       - INTEGRATION_OUTREACH_SIGNATURE_KEY
       - RESET_PASSWORD_SECRET_TOKEN
