Fix previous dump test step
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -87,7 +87,7 @@ tasks:
 
   e2e-server-previous-dump:
     cmds:
-      - make test FILES=./test/e2e/server/index.spec.js
+      - task: integration-server
 
   post-summary:
     cmds:
