Move graphile-worker NO_LOG_SUCCESS var
Move the NO_LOG_SUCCESS environment variable used
by graphile worker. Without this variable being set
graphile worker will output all success logs, which
is unnecessary and noisy.

Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/deploy-templates/jellyfish-product/product/config-manifest.yml
+++ b/deploy-templates/jellyfish-product/product/config-manifest.yml
@@ -32,6 +32,8 @@ properties:
     type: string?
   NODE_ENV:
     type: string
+  NO_LOG_SUCCESS:
+    type: string?
   SENTRY_DSN_SERVER:
     type: string?
   LOGENTRIES_TOKEN:
