--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -14,6 +14,7 @@ services:
       - balena-mdns-publisher
     environment:
       - LOGLEVEL=crit
+      - NO_LOG_SUCCESS=1
       - LIVECHAT_HOST=http://livechat
       - LIVECHAT_PORT=80
       - SERVER_HOST=http://api
