--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - balena-mdns-publisher
     environment:
       - LOGLEVEL=crit
+      - NO_LOG_SUCCESS=1
       - NODE_ENV
       - SENTRY_DSN_SERVER
       - FS_DRIVER
@@ -108,6 +109,7 @@ services:
       - balena-mdns-publisher
     environment:
       - LOGLEVEL=crit
+      - NO_LOG_SUCCESS=1
       - NODE_ENV
       - SENTRY_DSN_SERVER
       - FS_DRIVER
