--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "compose:up": "docker-compose up",
     "compose:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
     "compose:monitor": "docker-compose -f docker-compose.yml -f docker-compose.monitor.yml up",
-    "compose:database": "docker-compose up postgres redis haproxy"
+    "compose:database": "docker-compose up postgres redis haproxy",
+    "push:lib": "./scripts/push-lib.js"
   },
   "deplint": {
     "files": [
