--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "compose:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
     "compose:monitor": "docker-compose -f docker-compose.yml -f docker-compose.monitor.yml up",
     "compose:database": "docker-compose up postgres redis haproxy",
+    "push": "./scripts/push.sh",
     "push:lib": "./scripts/push-lib.js"
   },
   "deplint": {
