--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -15,7 +15,9 @@
     "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:unit",
     "test:unit": "jest",
     "doc": "typedoc lib/",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "webpack": "webpack --config=./webpack.config.js",
+    "dev": "mkdir -p ./dist/ui && PUBLIC_DIR='./' NODE_ENV=development ./conf/env.sh && cp ./env-config.js ./dist/ui/ && webpack serve --config=./webpack.config.js --color"
   },
   "author": "Balena.io. <hello@balena.io>",
   "license": "AGPL-3.0",
