--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -14,7 +14,8 @@
     "lint:fix": "balena-lint --fix lib",
     "doc": "typedoc lib/",
     "prepack": "npm run build",
-    "dev": "mkdir -p ./dist/livechat && NODE_ENV=development PUBLIC_DIR='./' ./conf/env.sh && cp ./env-config.js ./dist/livechat/ && NODE_ENV=development webpack serve --config=./webpack.config.js --color"
+    "env": "mkdir -p ./dist/livechat && NODE_ENV=development PUBLIC_DIR='./' ./conf/env.sh && cp ./env-config.js ./dist/livechat/",
+    "dev": "npm run env && NODE_ENV=development webpack serve --config=./webpack.config.js --color"
   },
   "author": "Balena.io. <hello@balena.io>",
   "license": "AGPL-3.0",
