Fix mode in webpack build config
Fallback to production mode when building with webpack.
Explicitly set NODE_ENV for both prod and dev build commands.

Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/livechat/Dockerfile
+++ b/apps/livechat/Dockerfile
@@ -20,7 +20,7 @@ COPY ./apps/livechat /usr/src/jellyfish/apps/livechat
 #dev-cmd-live=cd /usr/src/jellyfish/apps/livechat && npm run dev
 #dev-copy=./.libs/ /usr/src/jellyfish/apps/livechat/node_modules/@balena/
 
-RUN NODE_ENV=production npm run build
+RUN npm run build
 
 ###########################################################
 # Runtime
