--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && webpack --config=./webpack.config.js",
+    "build": "npm run clean && NODE_ENV=production NODE_OPTIONS=--max-old-space-size=6144 webpack --config=./webpack.config.js",
     "lint": "balena-lint lib test && depcheck --ignore-bin-package --ignores=@babel/*,@types/jest,assert,babel-loader,canvas,history,typedoc",
     "lint:fix": "balena-lint --fix lib test",
     "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:unit",
