--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:e2e:server": "ava ./test/e2e/server/**/*.spec.js",
     "test:integration:server": "(cd apps/server && npm run test:integration)",
     "docs": "(cd apps/livechat && npm run doc); (cd apps/server && npm run doc); (cd apps/ui && npm run doc)",
-    "docs:diagram": "mmdc -i docs/diagrams/architecture.mmd -o docs/assets/architecture.png -w 2560 -H 1600",
+    "docs:diagram": "nomnoml docs/diagrams/architecture.noml > docs/assets/architecture.svg",
     "docs:summary": "./scripts/architecture-summary.sh > ARCHITECTURE.md",
     "clean": "rimraf apps/*/packages/*",
     "postinstall": "(cd apps/livechat && npm i); (cd apps/server && npm i); (cd apps/ui && npm i)",
@@ -123,9 +123,9 @@
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^11.2.6",
     "lodash": "^4.17.21",
-    "mermaid.cli": "^0.5.1",
     "nock": "^13.2.1",
     "node-jose": "^2.0.0",
+    "nomnoml": "^1.4.0",
     "puppeteer": "^13.0.0",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
