--- a/apps/livechat/package.json
+++ b/apps/livechat/package.json
@@ -21,7 +21,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@balena/jellyfish-chat-widget": "^12.5.102",
-    "@balena/jellyfish-client-sdk": "^7.0.33",
+    "@balena/jellyfish-client-sdk": "7.1.0-lucianbuzzo-new-login-endpoint-2b334b3d41bece203ecacacc0a2f4c7b51d1c60c",
     "@balena/jellyfish-ui-components": "^13.1.19",
     "@use-it/event-listener": "^0.1.7",
     "css-loader": "^5.2.7",
