--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -62,7 +62,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@balena/jellyfish-client-sdk": "^7.0.34",
+    "@balena/jellyfish-client-sdk": "7.1.0-lucianbuzzo-new-login-endpoint-2b334b3d41bece203ecacacc0a2f4c7b51d1c60c",
     "@balena/jellyfish-config": "^2.0.2",
     "@balena/jellyfish-types": "^1.2.42",
     "@balena/lint": "^6.2.0",
