--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -23,7 +23,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@balena/jellyfish-chat-widget": "^12.5.102",
-    "@balena/jellyfish-client-sdk": "^7.0.33",
+    "@balena/jellyfish-client-sdk": "7.1.0-lucianbuzzo-new-login-endpoint-2b334b3d41bece203ecacacc0a2f4c7b51d1c60c",
     "@balena/jellyfish-environment": "^6.0.9",
     "@balena/jellyfish-ui-components": "^13.1.19",
     "analytics-client": "^1.7.0",
