--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -92,6 +92,7 @@
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
     "@types/jest": "^26.0.24",
+    "@types/react-router-dom": "^5.3.3",
     "@types/sinon": "^10.0.8",
     "babel-loader": "^8.2.3",
     "browser-env": "^3.3.0",
