--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.template
+    command: /usr/bin/entry.sh
     cap_add:
       - SYS_RESOURCE
       - SYS_ADMIN
@@ -219,7 +220,8 @@ services:
   # https://github.com/balena-io/open-balena-db
   postgres:
     # pg12 (pg_dump) dependency on jellyfish-tests
-    image: balena/open-balena-db:v5.0.2
+    # v4.1.0 https://github.com/balena-io/open-balena-db/commit/30eb64e12b8adf9169059719162383cab6cc0296
+    image: balena/open-balena-db:v4.1.0
     restart: unless-stopped
     healthcheck:
       interval: 15s
