--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,12 @@ services:
   postgres:
     image: balena/open-balena-db:4.1.0
     restart: always
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U docker']
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    command: ['postgres', '-c', 'fsync=off', '-c', 'synchronous_commit=off', '-c', 'full_page_writes=off']
     networks:
       - internal
   redis:
