--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -91,8 +91,22 @@
     "@balena/lint": "^6.2.0",
     "@emotion/cache": "^11.7.1",
     "@emotion/react": "^11.7.1",
+    "@types/common-tags": "^1.8.1",
+    "@types/debounce-promise": "^3.1.4",
+    "@types/enzyme": "^3.10.11",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/file-saver": "^2.0.5",
+    "@types/flat": "^5.0.2",
+    "@types/howler": "^2.2.4",
+    "@types/is-uuid": "^1.0.0",
     "@types/jest": "^27.4.0",
+    "@types/pluralize": "^0.0.29",
+    "@types/react-csv": "^1.1.2",
+    "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
+    "@types/react-virtualized": "^9.21.17",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/sinon": "^10.0.9",
     "babel-loader": "^8.2.3",
     "browser-env": "^3.3.0",
