--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -30,7 +30,7 @@
     "@balena/jellyfish-metrics": "^2.0.37",
     "@balena/jellyfish-plugin-balena-api": "^2.0.9",
     "@balena/jellyfish-plugin-channels": "^2.0.14",
-    "@balena/jellyfish-plugin-default": "^23.1.10",
+    "@balena/jellyfish-plugin-default": "^23.1.11",
     "@balena/jellyfish-plugin-discourse": "^2.0.10",
     "@balena/jellyfish-plugin-flowdock": "^2.0.10",
     "@balena/jellyfish-plugin-front": "^2.0.7",
@@ -39,9 +39,9 @@
     "@balena/jellyfish-plugin-product-os": "^4.0.9",
     "@balena/jellyfish-plugin-typeform": "^5.0.10",
     "@balena/jellyfish-queue": "^4.0.30",
-    "@balena/jellyfish-worker": "^18.5.5",
+    "@balena/jellyfish-worker": "^18.6.0",
     "@balena/socket-prometheus-metrics": "^0.0.3",
-    "aws-sdk": "^2.1069.0",
+    "aws-sdk": "^2.1071.0",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.1",
@@ -64,17 +64,20 @@
     "@balena/jellyfish-config": "^2.0.2",
     "@balena/jellyfish-types": "^2.0.4",
     "@balena/lint": "^6.2.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.4.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.15",
+    "@types/response-time": "^2.3.5",
     "catch-uncommitted": "^2.0.0",
     "depcheck": "^1.4.3",
-    "jest": "^27.5.0",
+    "jest": "^27.5.1",
     "nock": "^13.2.4",
     "nodemon": "^2.0.15",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "typedoc": "^0.22.11",
     "typescript": "^4.5.5"
   }
