--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -70,7 +70,7 @@
     "react-select": "^4.3.1",
     "react-swipeable": "^6.2.0",
     "react-trello": "^2.2.11",
-    "react-virtualized": "^9.22.3",
+    "react-virtuoso": "^2.6.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
