Enable ui e2e tests
Change-type: minor

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:unit:server": "(cd apps/server && npm run test:unit)",
     "test:e2e:sdk": "ava ./test/e2e/sdk/*.spec.js",
     "test:e2e:livechat": "ava ./test/e2e/livechat/**/*.spec.js",
-    "test:e2e:ui": "INTEGRATION_OUTREACH_APP_ID= ava ./test/e2e/ui/**/*.spec.js",
+    "test:e2e:ui": "ava ./test/e2e/ui/**/*.spec.js",
     "test:e2e:server": "ava ./test/e2e/server/**/*.spec.js",
     "test:integration:server": "(cd apps/server && npm run test:integration)",
     "docs": "(cd apps/livechat && npm run doc); (cd apps/server && npm run doc); (cd apps/ui && npm run doc)",
@@ -81,7 +81,7 @@
   "license": "AGPL-3.0",
   "devDependencies": {
     "@balena/jellyfish-action-library": "^16.2.11",
-    "@balena/jellyfish-chat-widget": "^13.0.0",
+    "@balena/jellyfish-chat-widget": "^13.0.15",
     "@balena/jellyfish-client-sdk": "^8.3.4",
     "@balena/jellyfish-config": "^2.0.2",
     "@balena/jellyfish-core": "^8.2.7",
@@ -99,7 +99,7 @@
     "@balena/jellyfish-plugin-typeform": "^4.0.39",
     "@balena/jellyfish-queue": "^1.0.395",
     "@balena/jellyfish-sync": "^6.3.1",
-    "@balena/jellyfish-ui-components": "^14.0.0",
+    "@balena/jellyfish-ui-components": "^14.1.0",
     "@balena/jellyfish-worker": "^10.1.30",
     "@balena/lint": "^6.2.0",
     "@octokit/plugin-retry": "^3.0.9",
@@ -124,7 +124,6 @@
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^11.2.6",
     "lodash": "^4.17.21",
-    "nock": "^13.2.2",
     "node-jose": "^2.0.0",
     "nomnoml": "^1.4.0",
     "puppeteer": "^13.1.2",
