Fix previous dump CI task
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -57,7 +57,7 @@ tasks:
 
   e2e-server-previous-dump:
     cmds:
-      - task: integration-server
+      - task: e2e-server
 
   post-summary:
     cmds:
