--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@balena/jellyfish-config/config/tsconfig.json",
+  "compilerOptions": {
+    "types": ["jest"]
+  },
   "typedocOptions": {
     "out": "../../docs/typedoc/server"
   }
