Replace puppeteer with playwright
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "test:unit:ui": "(cd apps/ui && npm run test:unit)",
     "test:unit:server": "(cd apps/server && npm run test:unit)",
     "test:e2e:sdk": "ava ./test/e2e/sdk/*.spec.js",
-    "test:e2e:livechat": "ava ./test/e2e/livechat/**/*.spec.js",
-    "test:e2e:ui": "ava ./test/e2e/ui/**/*.spec.js",
+    "test:e2e:livechat": "playwright test test/e2e/livechat",
+    "test:e2e:ui": "playwright test test/e2e/ui",
     "test:e2e:server": "ava ./test/e2e/server/**/*.spec.js",
     "test:integration:server": "(cd apps/server && npm run test:integration)",
     "docs": "(cd apps/livechat && npm run doc); (cd apps/server && npm run doc); (cd apps/ui && npm run doc)",
@@ -102,6 +102,7 @@
     "@octokit/plugin-retry": "^3.0.9",
     "@octokit/plugin-throttling": "^3.5.2",
     "@octokit/rest": "^18.12.0",
+    "@playwright/test": "^1.19.0",
     "ava": "^4.0.1",
     "aws-sdk": "^2.1069.0",
     "bluebird": "^3.7.2",
@@ -123,7 +124,7 @@
     "lodash": "^4.17.21",
     "node-jose": "^2.1.0",
     "nomnoml": "^1.4.0",
-    "puppeteer": "^13.2.0",
+    "playwright": "^1.19.0",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "shellcheck": "^1.1.0",
