--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "46.2.3",
   "homepage": "https://github.com/product-os/jellyfish",
   "description": "The Jellyfish Project",
-  "codename": "#STPLTG",
+  "codename": "proclaimer",
   "private": true,
   "repository": {
     "type": "git",
