--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -74,7 +74,7 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "rendition": "^25.11.1",
+    "rendition": "^25.12.1",
     "skhema": "^6.0.2",
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.3",
@@ -110,6 +110,7 @@
     "@types/redux-mock-store": "^1.0.3",
     "@types/sinon": "^10.0.11",
     "babel-loader": "^8.2.3",
+    "body-parser": "^1.19.2",
     "browser-env": "^3.3.0",
     "canvas": "^2.9.0",
     "catch-uncommitted": "^2.0.0",
