--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -132,13 +132,6 @@
     "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4",
-    "workbox-core": "^6.5.1",
-    "workbox-precaching": "^6.5.1",
-    "workbox-routing": "^6.5.1",
-    "workbox-strategies": "^6.5.1",
-    "workbox-sw": "^6.5.1",
-    "workbox-webpack-plugin": "^6.5.1",
-    "workbox-window": "^6.5.1"
+    "webpack-dev-server": "^4.7.4"
   }
 }
