Make grafana/prometheus first class apps
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -26,6 +26,12 @@ use_backend api_backend if host_api_backend
 acl host_registry_backend hdr_dom(host) -i registry.ly.fish.local
 use_backend registry_backend if host_registry_backend
 
+acl host_grafana_backend hdr_dom(host) -i grafana.ly.fish.local
+use_backend grafana_backend if host_grafana_backend
+
+acl host_prometheus_backend hdr_dom(host) -i prometheus.ly.fish.local
+use_backend prometheus_backend if host_prometheus_backend
+
 frontend tcp_5432_in
 mode tcp
 bind *:5432
@@ -35,6 +41,16 @@ frontend tcp_6379_in
 mode tcp
 bind *:6379
 default_backend redis_backend
+
+frontend tcp_3000_in
+mode tcp
+bind *:3000
+default_backend grafana_backend
+
+frontend tcp_9090_in
+mode tcp
+bind *:9090
+default_backend prometheus_backend
 
 backend ui_backend
 mode http
@@ -61,3 +77,15 @@ mode http
 option forwardfor
 balance roundrobin
 server registry registry:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+
+backend grafana_backend
+mode http
+option forwardfor
+balance roundrobin
+server grafana grafana:3000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 3000
+
+backend prometheus_backend
+mode http
+option forwardfor
+balance roundrobin
+server prometheus prometheus:9090 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9090
