Test queue merged in worker
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
     "@balena/jellyfish-plugin-outreach": "^2.0.78",
     "@balena/jellyfish-plugin-product-os": "^4.0.55",
     "@balena/jellyfish-plugin-typeform": "^5.0.69",
-    "@balena/jellyfish-queue": "^4.1.30",
-    "@balena/jellyfish-worker": "^20.2.10",
+    "@balena/jellyfish-worker": "21.0.0-joshbwlng-queue-a1359ca68c09abba2e14cea8ee833f76282f3a2f",
     "@balena/lint": "^6.2.0",
     "@playwright/test": "^1.20.0",
     "autumndb": "^19.1.2",
