--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '2.1'
 
+volumes:
+  registry-data: null
+  resin-data: null
+
 services:
   postgres:
     image: balena/open-balena-db:v5.1.0
@@ -166,6 +170,42 @@ services:
       - internal
     expose:
       - 3000
+  registry:
+    build: apps/registry
+    command: ['/usr/local/bin/docker-registry', 'serve', '/etc/registry.yml']
+    ports:
+      - 8004:80
+    depends_on:
+      - balena-mdns-publisher
+      - haproxy
+    restart: unless-stopped
+    cap_add:
+      - SYS_RESOURCE
+      - SYS_ADMIN
+    security_opt:
+      - apparmor=unconfined
+    tmpfs:
+      - /run
+      - /sys/fs/cgroup
+    healthcheck:
+      interval: 15s
+      retries: 3
+      test: /usr/src/app/docker-hc
+      timeout: 5s
+    volumes:
+      - registry-data:/data
+      - resin-data:/balena
+    networks:
+      - internal
+    environment:
+      REGISTRY2_CACHE_ADDR: redis:6379
+      REGISTRY2_CACHE_DB: 1
+      REGISTRY2_CACHE_ENABLED: "true"
+      # (TBC) use S3/MinIO
+      REGISTRY2_STORAGEPATH: /data
+      HOSTS_CONFIG: REGISTRY_HOST:registry,REGISTRY2_HOST:registry,REGISTRY2_TOKEN_AUTH_ISSUER:api,REGISTRY_TOKEN_AUTH_CERT_ISSUER:api,REGISTRY2_TOKEN_AUTH_REALM:api
+      TOKENS_CONFIG: REGISTRY2_SECRETKEY:hex
+      SENTRY_CONFIG: ','
   balena-mdns-publisher:
     image: 'balena/balena-mdns-publisher:v1.14.8'
     network_mode: host
@@ -211,6 +251,7 @@ services:
           - redis.ly.fish.local
           - grafana.ly.fish.local
           - prometheus.ly.fish.local
+          - registry.ly.fish.local
     restart: unless-stopped
 
 networks:
