--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -67,6 +67,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
     "@types/response-time": "^2.3.5",
+    "@types/uuid": "^8.3.4",
     "catch-uncommitted": "^2.0.0",
     "depcheck": "^1.4.3",
     "jest": "^27.5.1",
