--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,8 @@ services:
       interval: 15s
       retries: 3
       test: pgrep grafana-server
+    environment:
+      - GF_LOG_LEVEL=error
     restart: unless-stopped
     networks:
       - internal
