--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -37,7 +37,7 @@
     "@balena/jellyfish-plugin-outreach": "^2.0.85",
     "@balena/jellyfish-plugin-product-os": "^4.0.57",
     "@balena/jellyfish-plugin-typeform": "^5.1.3",
-    "@balena/jellyfish-worker": "^21.0.6",
+    "@balena/jellyfish-worker": "21.0.7-joshbwlng-to-contract-a536b42cf392fc90522827e6fa52aacbf5e2c09f",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "autumndb": "^19.1.9",
     "aws-sdk": "^2.1101.0",
