--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -50,6 +50,7 @@
     "flat": "^5.0.2",
     "howler": "^2.2.3",
     "immutability-helper": "^3.1.1",
+    "interactjs": "^1.10.11",
     "is-uuid": "^1.0.2",
     "json-e": "^4.4.3",
     "json-schema-faker": "^0.5.0-rcv.42",
