Increase timeouts on haproxy config for pg and redis to prevent timeouts from JF

--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -12,10 +12,10 @@ resolvers docker-bridge-resolver
   hold valid 0ms
 
 frontend http_80_in
-mode http
-option forwardfor
-bind *:80
-http-request add-header X-Forwarded-Proto http
+  mode http
+  option forwardfor
+  bind *:80
+  http-request add-header X-Forwarded-Proto http
 
 acl host_ui_backend hdr_dom(host) -i jel.ly.fish.local livechat.ly.fish.local
 use_backend ui_backend if host_ui_backend
@@ -33,14 +33,18 @@ acl host_prometheus_backend hdr_dom(host) -i prometheus.ly.fish.local
 use_backend prometheus_backend if host_prometheus_backend
 
 frontend tcp_5432_in
-mode tcp
-bind *:5432
-default_backend postgres_backend
+  bind *:5432
+  mode tcp
+  log global
+  timeout client 1440m
+  default_backend postgres_backend
 
 frontend tcp_6379_in
-mode tcp
-bind *:6379
-default_backend redis_backend
+  bind *:6379
+  mode tcp
+  log global
+  timeout client 1440m
+  default_backend redis_backend
 
 frontend tcp_3000_in
 mode tcp
@@ -59,12 +63,20 @@ balance roundrobin
 server ui ui:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
 
 backend redis_backend
-mode tcp
-server redis redis:6379 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 6379
+  mode tcp
+  retries 2  
+  timeout connect 4s
+  timeout server 1440m
+  timeout check 5s
+  server redis redis:6379 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 6379
 
 backend postgres_backend
-mode tcp
-server postgres postgres:5432 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 5432
+  mode tcp
+  retries 2  
+  timeout connect 4s
+  timeout server 1440m
+  timeout check 5s
+  server postgres postgres:5432 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 5432
 
 backend api_backend
 mode http
