Test contract stream in worker
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -37,7 +37,7 @@
     "@balena/jellyfish-plugin-outreach": "^2.0.97",
     "@balena/jellyfish-plugin-product-os": "^4.0.57",
     "@balena/jellyfish-plugin-typeform": "^5.1.18",
-    "@balena/jellyfish-worker": "^21.1.11",
+    "@balena/jellyfish-worker": "21.2.0-joshbwlng-contract-streams-e229ff486ce1805ba02a7477f6f9cce5ecd335a1",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "autumndb": "^19.1.14",
     "aws-sdk": "^2.1106.0",
