Update @balena/jellyfish-worker from 21.2.12 to 22.0.0
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,9 +14,8 @@
     "build": "npm run clean && tsc -p tsconfig.build.json",
     "lint": "balena-lint lib test && depcheck --ignore-bin-package --ignores=@types/jest,typedoc",
     "lint:fix": "balena-lint --fix lib test",
-    "test:unit": "jest ./test/unit/.*.spec.ts$",
     "test:integration": "CI=1 SERVER_HOST=http://localhost jest --runInBand --testTimeout=120000 --forceExit ./test/integration/.*.spec.ts$",
-    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:unit && npm run test:integration",
+    "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:integration",
     "doc": "typedoc lib/",
     "prepack": "npm run build",
     "start": "node --abort-on-uncaught-exception --stack-trace-limit=100 build/index.js",
@@ -37,7 +36,7 @@
     "@balena/jellyfish-plugin-outreach": "^2.0.121",
     "@balena/jellyfish-plugin-product-os": "^4.0.58",
     "@balena/jellyfish-plugin-typeform": "^5.1.39",
-    "@balena/jellyfish-worker": "^21.2.12",
+    "@balena/jellyfish-worker": "^22.0.0",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "autumndb": "^19.1.22",
     "aws-sdk": "^2.1116.0",
