--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "lint:catch": "catch-uncommitted --skip-node-versionbot-changes --exclude=VERSION,.versionbot/",
     "lint:server": "(cd apps/server && npm run lint)",
     "lint:ui": "(cd apps/ui && npm run lint)",
-    "test:unit": "npm run test:unit:ui && npm run test:unit:server",
+    "test:unit": "npm run test:unit:ui",
     "test:unit:ui": "(cd apps/ui && npm run test:unit)",
-    "test:unit:server": "(cd apps/server && npm run test:unit)",
     "test:e2e:sdk": "ava ./test/e2e/sdk/*.spec.js",
     "test:e2e:ui": "playwright test test/e2e/ui",
     "test:e2e:server": "ava ./test/e2e/server/**/*.spec.js",
@@ -88,7 +87,7 @@
     "@balena/jellyfish-plugin-outreach": "^2.0.121",
     "@balena/jellyfish-plugin-product-os": "^4.0.58",
     "@balena/jellyfish-plugin-typeform": "^5.1.39",
-    "@balena/jellyfish-worker": "^21.2.12",
+    "@balena/jellyfish-worker": "^22.0.0",
     "@balena/lint": "^6.2.0",
     "@playwright/test": "^1.21.0",
     "autumndb": "^19.1.22",
